fixing little thing

--- a/brun17using.tex
+++ b/brun17using.tex
@@ -114,7 +114,7 @@ Fighting the frost event is not the challenge, what is hard is predicting them.
 
 The goal of the \agri deployment (part of the PEACH~\cite{watteyne16peach} project) is to predict frost events in a peach orchard.
 We install sensors around the orchard that measure air temperature, air relative humidity, soil moisture and soil temperature.
-We feed the collected data into a database, and by analyzing the data in real-time using machine learning techniques \xavi{too generic? what ML techniques?}, we can identify patterns in the data to predict frost events.
+We feed the collected data into a database, and by analyzing the data in real-time we can identify patterns in the data to predict frost events.
 
 % agri: architecture
 
