--- a/brun17using.tex
+++ b/brun17using.tex
@@ -50,7 +50,7 @@
 
 \date{}
 
-\title{Using \smip for \agri \\ and \building}
+\title{Using \smip in \agri \\ and \building Applications}
 
 \author[inria]{Keoma~Brun-Laguna}
     \ead{keoma.brun@inria.fr}
