--- a/brun18using_R2.tex
+++ b/brun18using_R2.tex
@@ -249,7 +249,7 @@ The schedule can be controlled by a central entity or distributed, although no e
 
 Frequency diversity is obtained by changing the communication frequency at every transmission.
 The IEEE~802.15.4-2015 standard defines 16 channels, each channel is 2MHz large and separated by 5MHz from its adjacent channels.
-By "hopping" between the available channels, TSCH increases the probability of transmission as different channels are differently affected by multipath interferences~\cite{watteyne09reliability}.
+By ``hopping'' between the available channels, TSCH increases the probability of transmission as different channels are differently affected by multipath interferences~\cite{watteyne09reliability}.
 
 % smip
 
