pushing R2_RC2 manuscript

--- a/brun18using_R2.tex
+++ b/brun18using_R2.tex
@@ -264,7 +264,7 @@ In a nutshell,
 
 % TSCH in IEEE802.15.4
 
-TSCH was introduced in low-power wireless industrial standards WirelessHART (2008) and ISA100.11a (2009).
+TSCH was introduced in low-power wireless industrial standards Wireless-HART (2008) and ISA100.11a (2009).
 These standards have been very successfully rolled out in the industrial market (industrial process monitoring, factory automation).
 A new TSCH mode was added to the IEEE802.15.4 standard by the IEEE802.15.4e Task Group, to ``better support the industrial markets''.
 From a packet format point of view, this meant adding Information Elements, generic containers to carry TSCH-specific information, for example the hopping sequence added to beacon frames.
