fixing Carlos comments

--- a/brun18using_R2.tex
+++ b/brun18using_R2.tex
@@ -201,7 +201,8 @@ This article extends this work and offers analysis over a 3-month period, and co
 % remainder
 
 The remainder of this article is organized as follows.
-Section~\ref{sec:related} lists the related work and explain why we chose \smip.
+Section~\ref{sec:related} lists the related work on real-world deployments.
+Section~\ref{sec:tsch} gives details about TSCH and explains why we chose \smip
 Section~\ref{sec:collected} describes the types of network statistics, and the dataset of statistics collected over each 3~month period.
 Section~\ref{sec:intuitive} presents results that confirm assumptions about what we can expect for a real-world TSCH \smip deployment.
 Section~\ref{sec:notsointuitive} presents not so intuitive results about link symmetry and network stability.
